# Identity-Verification-System

./: .env.example  .gitignore  README.md  create_admin.py  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-ml.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 55d370d2a88e_add_verification_score_and_face_path.py  b0752957f843_initial.py  c3a8f1d92e47_add_god_pipeline_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  deps.py  idv.py
backend/app/middleware/: cors.py  rate_limit.py  security.py
backend/app/models/: __init__.py  approved_country.py  audit_log.py  document.py  document_class_rule.py  face_verification.py  idv_application.py  pipeline_result.py  user.py  watchlist_entry.py
backend/app/schemas/: auth.py  document.py  idv.py  pipeline.py
backend/app/services/: auth_service.py  face_service.py  fraud_service.py  idv_service.py  ocr_service.py  scoring_service.py
backend/app/services/pipeline/: __init__.py  orchestrator.py  stage_0_acceptance.py  stage_1_liveness.py  stage_2_extraction.py  stage_3_normalization.py  stage_4_internal_checks.py  stage_5_similarity.py  stage_6_scoring.py  stage_7_hard_rules.py  stage_8_decision.py  stage_9_result.py  types.py
backend/app/tasks/: __init__.py  verification.py
backend/app/utils/: security.py  storage.py  validators.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_documents.py  test_idv.py  test_security.py
frontend/: .dockerignore  index.html  nginx.conf  (+2 more)
(+29 files in other folders)
